# delirium

./: Cargo.toml  README.md
src/: lib.rs
src/ir/: mod.rs
src/ir/address/: mod.rs
src/ir/block/: mod.rs
src/ir/effect/: mod.rs
src/ir/expression/: mod.rs
src/ir/function/: mod.rs
src/ir/location/: mod.rs
src/ir/memory/: address.rs  mod.rs  region.rs
src/ir/phi/: mod.rs
src/ir/project/: mod.rs
src/ir/region/: mod.rs
src/ir/subroutine/: mod.rs
src/ir/value/: mod.rs
src/ir/variable/: mod.rs
src/lift/: mod.rs
src/lift/ecode/: mod.rs  utils.rs
src/lift/ecode/passes/: aliases.rs
src/lift/passes/: aliases.rs  mod.rs
src/oracles/: mod.rs
src/prelude/traits/: mod.rs
src/prelude/traits/id/: mod.rs
src/prelude/types/: mod.rs
src/prelude/types/entity/: mod.rs
src/prelude/types/erased/: mod.rs
src/prelude/types/id/: mod.rs
src/traits/id/: mod.rs
src/types/: bool.rs  bv.rs  float.rs  mod.rs  pointer.rs
src/types/entity/: mod.rs
src/types/id/: mod.rs
